--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.1",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   }
