--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.1",
+    "js-sha1": "^0.6.0",
     "lodash": "^4.17.21",
+    "string-hash": "^1.1.3",
     "uuid": "^8.3.2"
   }
 }
